# xfce-winxp-tc

./: .gitignore  .gitmodules  Dockerfile  LICENCE  README.md
base/bldtag/: CMakeLists.txt  README.MD  release.in
base/launch/: CMakeLists.txt  README.MD
base/launch/res/: setup-gtk-settings.ini  startwintc.in  wintc-launch.service  xinitrc.in
base/logonui/: CMakeLists.txt  README.MD  deps  wintc-logonui.desktop
base/logonui/src/: main.c  settings.c  settings.h  window.c  window.h
base/regsvc/: CMakeLists.txt  README.MD  deps
base/regsvc/res/: uk.oddmatics.wintc.registry.service.in
base/regsvc/src/: application.c  application.h  backend.c  backend.h  main.c
base/smss/: .gitignore  CMakeLists.txt  README.MD  deps
base/smss/res/: startwintc.in  wintc.desktop  xinitrc.in
base/smss/src/: main.c  xfsm-manager-dbus.xml  xfsm.c  xfsm.h
enduser/userpics/: CMakeLists.txt
fonts/: CMakeLists.txt  README.MD  debian-control
icons/luna/: CMakeLists.txt  README.MD  debian-control  index.theme  mappings  postinstall.sh
shared/comctl/: CMakeLists.txt  README.MD  deps
shared/comctl/public/: _api.h  animctl.h  cpl.h  libapi.h.in  menubind.h  style.h  wintc-comctl.h
shared/comctl/src/: animctl.c  animctl.h  cpl.c  menubind.c  style.c  style.h
shared/comgtk/: .gitignore  CMakeLists.txt  README.MD  deps  wintc-comgtk.pc.in
shared/comgtk/public/: accelerator.h  application.h  assets.h.in  backcompat.h  builder.h  clipbd.h  container.h  debug.h  defprocs.h  delegate.h  devices.h  errors.h  hashtable.h  icons.h  libapi.h  libapi.h.in  list.h  listbox.h  location.h  location.h.in  marshal.h  memory.h  menu.h  msgbox.h  profile.h  radio.h  regex.h  shorthand.h  signals.h  sound.h  strings.h  styles.h  treemodel.h  version.h  widget.h  window.h  wintc-comgtk.h  wintc-comgtk.h.in
shared/comgtk/src/: accelerator.c  application.c  assets.h.in  builder.c  clipbd.c  container.c  container.h  debug.h  defprocs.c  defprocs.h  delegate.c  devices.c  errors.c  errors.h  gchar.h  hashtable.c  icons.c  list.c  list.h  listbox.c  marshal.c  marshal.h  memory.c  menu.c  msgbox.c  msgbox.h  profile.c  profile.h  radio.c  regex.c  shorthand.h  signals.c  signals.h  sound.c  strings.c  strings.h  styles.c  styles.h  treemodel.c  version.c.in  (+4 more)
shared/exec/: CMakeLists.txt  README.MD  deps  wintc-exec.pc.in
shared/exec/public/: _api.h  action.h  desktop.h  errors.h  exec.h  libapi.h.in  mime.h  wintc-exec.h
shared/exec/src/: action.c  action.h  desktop.c  desktop.h  errors.c  exec.c  exec.h  mime.c  mime.h
shared/msgina/: CMakeLists.txt  README.MD  deps
shared/msgina/public/: authwnd.h  challenge.h  error.h  exitwnd.h  if_authui.h  if_sm.h  libapi.h  libapi.h.in  logon.h  state.h  wintc-msgina.h  xdgsm.h  xfsm.h
shared/msgina/src/: authwnd.c  authwnd.h  challenge.h  error.c  exitwnd.c  if_authui.c  if_sm.c  logon.c  logon.h  state.h  stripctl.c  stripctl.h  xdgsm.c  xfsm.c
shared/registry/: .gitignore  CMakeLists.txt  README.MD  deps
shared/registry/public/: libapi.h.in  regwrap.h  variant.h
shared/registry/src/: dbus-if.xml  regwrap.c  variant.c
shared/shcommon/: CMakeLists.txt  README.MD
shared/shcommon/public/: fs.h  libapi.h.in  monitor.h  path.h  places.h
shared/shcommon/src/: fs.c  marshal.c  marshal.h  marshals.list  monitor.c  path.c  places.c
shared/shell/: CMakeLists.txt  README.MD  deps
shared/shell/public/: browser.h  cpl.h  dialog.h  error.h  fldropts.h  fsclipbd.h  fsop.h  icnvwbeh.h  libapi.h.in  newmenu.h  nmspace.h  sound.h  trevwbeh.h  vwcpl.h  vwdesk.h  vwdrives.h  vwfs.h  vwtrash.h
shared/shell/src/: browser.c  cpl.c  dialog.c  error.c  fldropts.c  fs.c  fs.h  fsclipbd.c  fsop.c  icnvwbeh.c  newmenu.c  nmspace.c  sound.c  trevwbeh.c  vwcpl.c  vwdesk.c  vwdrives.c  vwfs.c  vwtrash.c
shared/shelldpa/: CMakeLists.txt  README.MD
shared/shelldpa/public/: _api.h  api.h  deskwnd.h  libapi.h.in  wintc-shelldpa.h
shared/shelldpa/src/: api.c  api.h  deskwnd.c  impl-wayland.c  impl-wayland.h  impl-wndmgmt-wnck.c  impl-wndmgmt-wnck.h  impl-wndmgmt-xfw.c  impl-wndmgmt-xfw.h  impl-x11.c  impl-x11.h
shared/shellext/: .gitignore  CMakeLists.txt  README.MD  api.dia  deps
shared/shellext/public/: category.h  dnd.h  error.h  host.h  if_uihost.h  if_view.h  libapi.h.in  uictl.h  viewitem.h  viewops.h
shared/shellext/src/: error.c  host.c  host_priv.h.in  if_uihost.c  if_view.c  uictl.c  viewitem.c
shared/shlang/: .gitignore  CMakeLists.txt  README.MD  deps
shared/shlang/po/: bg_BG.po  cs_CZ.po  de_DE.po  el_GR.po  et_EE.po  fr_FR.po  ja_JP.po  pt_BR.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  zh_CN.po  zh_TW.po
shared/shlang/public/: controls.h  domain.h.in  libapi.h  libapi.h.in  places.h  punctuation.h  ui.h
shared/shlang/src/: controls.c  places.c  ui.c
shared/shllang/: CMakeLists.txt  README.MD  deps  test  wintc-shllang.pc.in
shared/shllang/po/: ar_SA.po  da_DK.po  es_ES.po  fi_FI.po  he_IL.po  hr_HR.po  hu_HU.po  it_IT.po  ja_JP.po  ko_KR.po  lt_LT.po  lv_LV.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_PT.po  ro_RO.po  sk_SK.po  sl_SI.po
shared/shllang/public/: wintc-shllang.h  wintc-shllang.h.in
shared/shllang/src/: config.h  controls.c  controls.h  domain.h.in  places.c  places.h  punctuation.h  ui.c  ui.h
shared/sndapi/: CMakeLists.txt  README.MD  deps
shared/sndapi/public/: _api.h  context.h  libapi.h.in  output.h  wintc-sndapi.h
shared/sndapi/src/: context.c  context.h  output-priv.h  output.c  output.h  volcvt.c  volcvt.h
shared/syscfg/: CMakeLists.txt  deps
shared/syscfg/public/: enums.h  keys.h  libapi.h.in
shared/syscfg/src/: keys.c
shared/winbrand/: .gitignore  CMakeLists.txt  README.MD  deps
shared/wizard97/: CMakeLists.txt  README.MD  deps
shell/desktop/: CMakeLists.txt  README.MD  deps
shell/doctmpls/: CMakeLists.txt
shell/exitwin/: CMakeLists.txt  README.MD  deps
shell/explorer/: CMakeLists.txt  README.MD  deps  explorer.desktop  iexplore.desktop  iexplore.sh
shell/npwrdlg/: CMakeLists.txt
sounds/: CMakeLists.txt  README.MD  debian-control  index.theme  mappings
wallpapers/: CMakeLists.txt
(+2108 files in other folders)
